# ion-codex

./: .gitignore  CONTRIBUTING.md  FILES_ADDED_V104_OPERATIONAL_TRUTH_AUDIT_AND_LONG_HORIZON_ORCHESTRATION.txt  FILES_ADDED_V112_PACKAGE_RUNNABLE_STATUS_OPTIONAL_EVIDENCE_REPAIR.txt  FILES_ADDED_V72_HOSTED_MCP_BUNDLE_REPLAY_ALPHA.txt  FILES_ADDED_V84_CARRIER_CONTINUATION_AND_PRODUCTIZED_RUNTIME.txt  FILES_ADDED_V85_CARRIER_TASK_RETURN_INTAKE.txt  FILES_ADDED_V91_AGENT_CONTEXT_DYNAMICS_AND_FRONTDOOR.txt  FILES_ADDED_V93_CURSOR_ION_AUTOPILOT_COMMAND_AND_SUBAGENT_SURFACE.txt  FILES_ADDED_V97_LEAD_DEV_SURVIVAL_AUDIT_AND_AUTONOMOUS_LOOP_RECOVERY.txt  FILES_ADDED_V98_MASTER_ORCHESTRATION_AUTOMATION_AND_UI_RECOVERY.txt  README.md  SECURITY.md  pyproject.toml
.codex/: config.toml
.cursor/: hooks.json  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
ION/: README.md  REPO_AUTHORITY.md
ION_sandbox/: ION_SANDBOX_INDEX_20260508T190626Z.json  README.md
assessment/: ION_Workflow_Self_Assessment_v0_8.md
diffs/: DIFF_INDEX_20260508T190626Z.json  ION_CARRIER_FRICTION_LEDGER_PATCH_20260507.diff  ION_CUSTOM_GPT_ANTI_THEATER_PATCH_20260507.diff  ION_GPT_NATIVE_PORTABLE_ENGINE_PACKAGE_v0_2_PATCH_20260507.diff  ION_SOLE_GPT_PORTABLE_PACKAGE_V0_1_PATCH_20260507.diff  README.md
ion-sandbox-gpt/: CONTENT_CLASSIFICATION_MANIFEST.json  PRODUCT_MANIFEST.json  README.md  RELEASE_MANIFEST.json  RELEASE_READINESS.md  START_HERE.md  VALIDATION_REPORT.json
workpackets/: CUSTOM_GPT_INSTRUCTIONS_ANTI_THEATER_DROPIN_20260507.md  ION_ACTIONS_CODEX_IDE_FULL_EXECUTION_PLAN_2026-05-07.md  README.md  (+27 more)
(+6530 files in other folders)
